se agrega css, y se crea logo, isotiop y icono de usuario

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>Barkeepers</title>
 
   <base href="/" />
-
+  <link rel="stylesheet" href="index.css" />
   <meta name="color-scheme" content="light dark" />
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="format-detection" content="telephone=no" />
@@ -20,7 +20,21 @@
 </head>
 
 <body>
-  <app-root></app-root>
+
+  <div class="barraUs">
+    <div class="barraUs iconUs" id="iconUS"><img src="assets/Us.png" alt=""></div>
+    <div class="barraUs moreIcon" id="more"><img src="assets/more.png" alt=""></div>
+    <div class="barraUs logo" id="logo"><img src="assets/isotipo.png" alt=""></div>
+  </div>
+  <div class="barraNav">
+
+  </div>
+  <div class="Bus&Lis">
+
+  </div>
+  <div class="Coctel">
+
+  </div>
 </body>
 
 </html>
