se edita el css para la barra de usuario

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 
   <div class="barraUs">
     <div class="barraUs iconUs" id="iconUS"><img src="assets/Us.png" alt=""></div>
-    <div class="barraUs moreIcon" id="more"><img src="assets/more.png" alt=""></div>
+    <div class="barraUs iconUS" id="more"><img src="assets/more.png" alt=""></div>
     <div class="barraUs logo" id="logo"><img src="assets/isotipo.png" alt=""></div>
   </div>
   <div class="barraNav">
