modicando la barra de usuario y logo

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8" />
@@ -20,9 +20,9 @@
 <body>
 
   <div class="barraUs">
-    <div class="barraUs iconUs" id="iconUS"><img src="assets/Us.png" alt=""></div>
-    <div class="barraUs iconUS" id="more"><img src="assets/more.png" alt=""></div>
-    <div class="barraUs logo" id="logo"><img src="assets/isotipo.png" alt=""></div>
+    <div class="barraUs " ><img src="assets/Us.png" alt="user" class="iconUs" id="icon_US"></div>
+    <div class="barraUs " ><img src="assets/more.png" alt="more" class=" iconUs" id="more"></div>
+    <div class="barraUs logo" ><img src="assets/isotipo.png" alt="Barkeepers" id="logo"></div>
   </div>
   <div class="barraNav">
 
