posicion  de logo

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 
   <div class="barraUs">
     <div class="barraUs " ><img src="assets/Us.png" alt="user" class="iconUs" id="icon_US"></div>
-    <div class="barraUs " ><img src="assets/more.png" alt="more" class=" iconUs" id="more"></div>
+    <div class="barraUs more " ><img src="assets/more.png" alt="more" class=" iconUs" id="more"></div>
     <div class="barraUs logo" ><img src="assets/isotipo.png" alt="Barkeepers" id="logo"></div>
   </div>
   <div class="barraNav">
