se crea tab1 y se modifica el css

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" class="main">
 
 <head>
   <meta charset="utf-8" />
@@ -17,11 +17,11 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 </head>
 
-<body>
+<body >
 
   <div class="barraUs">
-    <div class="barraUs " ><img src="assets/Us.png" alt="user" class="iconUs" id="icon_US"></div>
-    <div class="barraUs more " ><img src="assets/more.png" alt="more" class=" iconUs" id="more"></div>
+    <div class="barraUs " ><a href="./app/tab1/tab1.page.html"><img src="assets/Us.png" alt="user" class="iconUs" id="icon_US"></a></div>
+    <div class="barraUs more " ><img src="assets/more.png" alt="more" class=" iconUs" id="more"></div><!--Es un boton que va a cambiar la imagen de usuario por una que quiera el usario-->
     <div class="barraUs logo" ><img src="assets/isotipo.png" alt="Barkeepers" id="logo"></div>
   </div>
   <div class="barraNav">
