Se pone ña barra de busqueda final

--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,11 @@
   </div>
   <div class="barraNav">
     <div class="container">
-      <input type="text" placeholder="Search...">
-      <div class="search"></div>
+      <div class="search">
+        <input type="text" class="searchTerm" placeholder="What are you looking for?">
+        <button type="submit" class="searchButton">
+          <i class="fa fa-search"></i>
+       </button>
     </div>
     
    
