--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
 <body >
 
   <div class="barraUs">
-    <div class="barraUs " ><a href="./app/tab1/tab1.page.html"><img src="assets/Us.png" alt="user" class="iconUs" id="icon_US"></a></div>
+    <div class="barraUs " ><a href="tab1/sesion.html"><img src="assets/Us.png" alt="user" class="iconUs" id="icon_US"></a></div>
     <div class="barraUs more " ><img src="assets/more.png" alt="more" class=" iconUs" id="more"></div><!--Es un boton que va a cambiar la imagen de usuario por una que quiera el usario-->
     <div class="barraUs logo" ><img src="assets/isotipo.png" alt="Barkeepers" id="logo"></div>
   </div>
