--- a/app/tab1/sesion.html
+++ b/app/tab1/sesion.html
@@ -5,64 +5,60 @@
     <title>Barkeepers</title>
     <link rel="stylesheet" href="../index.css" />
 	<link rel="stylesheet" href="users.css" />
+	<link rel="icon" type="image/png" href="../assets/icon/icon.png" />
     </head>
 	<body class="main">
 
 		<div class="login-box">
 			<h2>Login</h2>
-			<form action="Users.php" method="post">
+			<form action="Log.php" method="post">
 			  <div class="user-box">
-				<input type="text" name="" required="">
-				<label>Username</label>
+				<input type="text" name="correo" required="">
+				<label>Correo</label>
 			  </div>
 			  <div class="user-box">
 				<input type="password" name="" required="">
 				<label>Password</label>
 			  </div>
-			  <a href="#">
+			  <a href="?p=Log.php">
 				<span></span>
 				<span></span>
 				<span></span>
 				<span></span>
-				Submit
+				Siguente
 			  </a>
 			</form>
-		  </div>
-
-
-
-
-			<h1>Inicio de sesión</h1>
-					<form action="Users.php" method="post">
-						<label>Correo</label>
-						<input type="text" name="correo">
-						<br><br>
-						<label>Contraseña</label>
-						<input type="text" name="contraseña">
-						<br><br>
-						<input type="submit" name="siguiente" value="Siguiente">
-				</form>	
-
-		<center >
-			<h1>Cargar y Ver Datos</h1>
-				<form action="Users.php" method="post">
+			<h2>Registro</h2>
+			<form action="Users.php" method="post">
+				<div class="user-box">
+					<input type="text" name="nombre" required="">
 					<label>Nombre</label>
-					<input type="text" name="nombre">
-						<br><br>
+				</div>
+				<div class="user-box">
+					<input type="text" name="apellido" required="">
 					<label>Apellido</label>
-					<input type="text" name="apellido">
-					<br><br>
+				</div>
+				<div class="user-box">
+					<input type="text" name="correo" required="">
 					<label>Correo</label>
-					<input type="text" name="correo">
-					<br><br>
+				</div>
+				<div class="user-box">
+					<input type="password" name="contraseña" required="">
 					<label>Contraseña</label>
-					<input type="text" name="contraseña">
-					<br><br>
-					<label>Nacimiento</label>
+				</div>
+				<div class="user-box">
 					<input type="date" name="fecha">
-					<br><br>
-					<input type="submit" name="enviar">
-			</form>	
-		</center>
+					<label>Nacimiento</label>
+				</div>
+				<a href="?p=Users.php">
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+					Siguente
+				</a>
+		</form>	
+
+	</div>
 	</body>
 </html>	
