--- a/app/tab1/sesion.html
+++ b/app/tab1/sesion.html
@@ -20,14 +20,14 @@
 				<input type="password" name="" required="">
 				<label>Password</label>
 			  </div>
-			  <a href="?p=Log.php">
-				<span></span>
-				<span></span>
-				<span></span>
-				<span></span>
-				Siguente
-			  </a>
+			  <input type="button" value="Siguiente">
+				<!--<span>Siguiente</span>-->
+				</input>
 			</form>
+		</br>
+		</br>
+		</br>
+			<div class="log_out"></div>
 			<h2>Registro</h2>
 			<form action="Users.php" method="post">
 				<div class="user-box">
@@ -38,6 +38,10 @@
 					<input type="text" name="apellido" required="">
 					<label>Apellido</label>
 				</div>
+				<!--<div class="user-box">
+					<input type="image" name="profile" required="">
+					<label>Foto de perfil</label>
+				</div>-->
 				<div class="user-box">
 					<input type="text" name="correo" required="">
 					<label>Correo</label>
@@ -50,15 +54,11 @@
 					<input type="date" name="fecha">
 					<label>Nacimiento</label>
 				</div>
-				<a href="?p=Users.php">
-					<span></span>
-					<span></span>
-					<span></span>
-					<span></span>
-					Siguente
-				</a>
-		</form>	
+				<input type="button" value="Siguiente">
+				<!--<span>Siguiente</span>-->
+				</input>
+			</form>	
 
-	</div>
+
 	</body>
 </html>	
