--- a/app/tab1/sesion.html
+++ b/app/tab1/sesion.html
@@ -20,9 +20,7 @@
 				<input type="password" name="" required="">
 				<label>Password</label>
 			  </div>
-			  <input type="button" value="Siguiente">
-				<!--<span>Siguiente</span>-->
-				</input>
+			  <input type="button" value="Siguiente" style="width: 154px;">
 			</form>
 		</br>
 		</br>
@@ -54,9 +52,7 @@
 					<input type="date" name="fecha">
 					<label>Nacimiento</label>
 				</div>
-				<input type="button" value="Siguiente">
-				<!--<span>Siguiente</span>-->
-				</input>
+				<input type="button" value="Siguiente"style="width: 154px;"onClick="action='Users.php'">
 			</form>	
 
 
