--- a/app/tab1/sesion.html
+++ b/app/tab1/sesion.html
@@ -8,7 +8,7 @@
 	<link rel="icon" type="image/png" href="../assets/icon/icon.png" />
     </head>
 	<body class="main">
-
+		
 		<div class="login-box">
 			<h2>Login</h2>
 			<form action="Log.php" method="post" id="UserLog">
@@ -42,10 +42,6 @@
 					<input type="text" name="apellido" required="">
 					<label>Apellido</label>
 				</div>
-				<!--<div class="user-box">
-					<input type="image" name="profile" required="">
-					<label>Foto de perfil</label>
-				</div>-->
 				<div class="user-box">
 					<input type="text" name="correo" required="">
 					<label>Correo</label>
@@ -67,7 +63,11 @@
 				  </a>
 
 			</form>	
-
+			<script>
+				function myFunction() {
+    				document.getElementById("newUser").User();
+				}
+			</script>
 
 	</body>
 </html>	
